--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,14 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@trpc/client": "^10.43.7",
+    "@trpc/server": "^10.43.7",
+    "server": "workspace:^",
     "vue": "^3.3.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
+    "eslint-config": "workspace:*",
+    "tsconfig": "workspace:*",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
-    "vue-tsc": "^1.8.22",
-    "eslint-config": "workspace:*",
-    "tsconfig": "workspace:*"
+    "vue-tsc": "^1.8.22"
   }
 }
