--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,19 +1,23 @@
 {
-  "private": true,
   "type": "module",
   "name": "server",
   "version": "1.0.0",
   "scripts": {
     "dev": "tsx watch index"
   },
+  "files": [
+    "./index.ts"
+  ],
   "license": "ISC",
   "dependencies": {
+    "@trpc/client": "^10.43.7",
     "@trpc/server": "^10.43.7",
+    "cors": "^2.8.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "tsconfig": "workspace:*",
     "tsx": "^4.2.0",
-    "typescript": "^5.2.2",
-    "tsconfig": "workspace:*"
+    "typescript": "^5.2.2"
   }
 }
