--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "prettier": "^3.0.0",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@7.15.0"
+  "packageManager": "pnpm@7.15.0",
+  "dependencies": {
+    "server": "^1.0.38"
+  }
 }
