--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,6 +16,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/uuid": "^9.0.7",
     "tsconfig": "workspace:*",
     "tsx": "^4.2.0",
     "typescript": "^5.2.2"
