--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -14,7 +14,8 @@
     "@trpc/server": "^10.43.7",
     "server": "workspace:^",
     "vue": "^3.3.8",
-    "vue3-toastify": "^0.1.14"
+    "vue3-toastify": "^0.1.14",
+    "vue-confetti": "^2.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
