feat: add toas logic

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/paypal-js": "^7.1.0",
     "@trpc/client": "^10.43.7",
     "@trpc/server": "^10.43.7",
     "server": "workspace:^",
     "vue": "^3.3.8",
-    "@paypal/paypal-js": "^7.1.0"
+    "vue3-toastify": "^0.1.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
